noinst_PROGRAMS        = test-conhash
test_conhash_SOURCES   = test-conhash.c
test_conhash_INCLUDES  = 
test_conhash_CFLAGS    = -I$(top_srcdir)/include -I$(top_srcdir)/event
test_conhash_LDADD     = $(top_srcdir)/event/libevent.la $(top_srcdir)/compat/libcompat.la $(top_srcdir)/base/libbase.la -lpthread

